Fix a crash when apps grid gap is enabled

Background:
A crash occur when a page break item exists in folder. (Not sure why a
page break item gets into folder.)

Changes:
Remove the page break item from folder if it exists.

Bug: 873485
Change-Id: I0cc435ae8d47c056eeec4b04a8afe7f5cc989588
Reviewed-on: https://chromium-review.googlesource.com/1172071
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583125}
Former-commit-id: defada06fc810fe128a72552fb9badaa0934cbae